[package]
name = "mzsniffer"
version = "0.1.0"
edition = "2021"
authors = ["William E. Fondire <fondriew@gmail.com>"]
rust-version = "1.62"
description = "Detect polyer contaminants in mass spectra."
readme = "README.md"
license = "Apache 2.0"

[[bin]]
name = "mzsniffer"
path = "src/main.rs"

[dependencies]
regex = "1.6"
lazy_static = "1.4.0"
async-compression = { version = "0.3", features = ["tokio", "zlib"] }
base64 = "0.13"
log = "0.4.0"
env_logger = "0.10.0"
tokio = { version = "1.0", features = ["io-util", "fs", "macros", "rt", "rt-multi-thread"] }
futures = "0.3"
rayon = "1.5"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.1"
quick-xml = { version = "0.27", features = ["async-tokio"] }
anyhow = "1.0"
clap = { version="4.2", features = ["cargo", "unicode"] }
