[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "mzsniffer"
requires-python = ">=3.7"
authors = [{name = "William E. Fondrie", email = "fondriew@gmail.com"}]
description = "Detect polymer contaminants in mass spectra."
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text.markdown"

[project.urls]
Homepage = "https://github.com/wfondrie/xeric"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
